less/gluon/wrapper.less
//
// Wrapper
// --------------------------------------------------


.message-wrapper {
    text-align: center;

    h1,
    h2 {
        font-family: @headings-font-family;
        font-weight: @font-family-weight;
    }

    h1 {
        font-size: 180px;
        margin-bottom: 23px;
    }

    h2 {
        font-size: 32px;
        margin-bottom: 18px;
    }

    .footer-badge {
        margin-top: 70px;
        padding-bottom: 14px;

        > img {
            height: 41px;
        }
    }

    &.message-left {
        text-align: left;

        h1 {
            text-align: center;
        }
    }

    .messages {
        display: inline-block;

        > ul {
            padding-left: 15px;
        }

        &.one-item {
            > ul {
                padding-left: 0;
                list-style-type: none;
            }
        }
    }

    .message-buttons {
        display: block;
        width: 100%;
        padding-top: 14px;
    }
}

